<resources>
    <string name="app_name">escamboapp</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="signIn">Entrar</string>
    <string name="emptyEmail">E-mail não pode ficar em branco</string>
    <string name="invalidEmail">E-mail inválido</string>
    <string name="emptyPassword">Senha não pode ficar em branco</string>
    <string name="shortPassword">Senha deve conter no mínimo 8 caracteres</string>
    <string name="differentPassword">Senhas não são iguais</string>
    <string name="signInError">Usuário ou senha incorretos</string>
    <string name="createAccount">Criar conta</string>
    <string name="firstName">Primeiro Nome</string>
    <string name="lastName">Sobrenome</string>
    <string name="confirmPassword">Confirmar senha</string>
    <string name="next">Próximo</string>
    <string name="invalidName">Primeiro nome não pode ficar em branco</string>
    <string name="birthDate">Aniversário (DD/MM/AAAA)</string>
    <string name="cpf">CPF (999.999.999-99)</string>
    <string name="phone">Telefone (99) 99999-9999</string>
    <string name="invalidCPF">CPF inválido</string>
    <string name="invalidInfo">Dados inválidos. Revise seus dados</string>
    <string name="selectProfilePhoto">Escolha uma foto de perfil</string>
    <string name="finish">Finalizar</string>
    <string name="photoNotPicked">Você não escolheu nenhuma foto</string>
    <string name="photoNotExists">A foto escolhida não está disponível no seu dispositivo</string>
    <string name="createAd">Criar anúncio</string>
    <string name="adTitle">Nome do anúncio</string>
    <string name="productPrice">Preço do produto (R$ ##,##)</string>
    <string name="description">Descrição</string>
    <string name="titleInvalid">Título do anúncio não pode ficar em branco</string>
    <string name="priceInvalid">Preço não pode ficar em branco e deve seguir o formato ###,##</string>
    <string name="descriptionInvalid">Descrição não pode ficar em branco.</string>
    <string name="navigationDrawerOpen">Open navigation drawer</string>
    <string name="navigationDrawerClose">Close navigation drawer</string>
    <string name="navHeaderTitle">Android Studio</string>
    <string name="navHeaderSubtitle">android.studio@android.com</string>
    <string name="navHeaderDesc">Navigation header</string>
    <string name="actionSettings">Settings</string>
    <string name="appName">EscamboApp</string>
    <string name="devEmail">gustavo-olegario@hotmail.com</string>
    <string name="searchHint">Digite um nome de produto</string>
    <string name="creatingUser">Criando usuário...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userCreated">Usuário criado</string>
    <string name="userNotCreated">Usuário não foi criado</string>
    <string name="title_activity_home_with_authentication">HomeWithAuthentication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signOut">Sair</string>
    <string name="authenticating">Autenticando usuário...</string>
    <string name="welcomeUser">Bem-vindo,</string>
    <string name="myProfile">Meu perfil</string>
    <string name="myAds">Meus anúncios</string>
    <string name="searchByCategory">Pesquisar por categoria</string>
    <string name="cantLoadImage">Não foi possível carregar a(s) imagem(ns)</string>
    <string name="editUser">Editar usuário</string>
</resources>
